--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -119,14 +119,16 @@ mark.current {
 }
 
 .overInput {
-    position: absolute;
-    color: rgba(145, 145, 145, 0.6);
-    z-index: 301;
-    top: 10px;
-    left: calc(100% - 170px);
-    text-align: right;
+    // position: absolute;
+    // color: rgba(145, 145, 145, 0.6);
+    // z-index: 301;
+    // top: 10px;
+    // left: calc(100% - 170px);
+    // text-align: right;
+    color: inherit !important;
 }
 
 .overInput.danger {
-    color: rgba(198, 25, 25, 0.6);
+    color: rgba(198, 25, 25, 0.6) !important;;
+
 }
